yaml/play.yaml
apiVersion: v1
kind: Service
metadata:
  name: play
  namespace: play 
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: play
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play
  namespace: play
spec:
  replicas: 3
  selector:
    matchLabels:
      app: play
  template:
    metadata:
      labels:
        app: play
    spec:
      containers:
      - name: play
        image: nginx
        ports:
        - containerPort: 8080
