yaml/play_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: play-ingress
  namespace: play
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: play
          servicePort: 80
